--- a/sub/proyectos/index.html
+++ b/sub/proyectos/index.html
@@ -157,7 +157,7 @@
      <section class="slider" id="main-slider"><!-- Ascensor -->
 				<div class="swiper-container" >
    				 <div class="swiper-wrapper" >
-					 <div class="swiper-slide"><img src="img/Ascensor/CARGA10.JPG" alt=""></div>
+					 <div class="swiper-slide"><img src="./imgp2/Ascensor/CARGA10.JPG" alt=""></div>
 					 <div class="swiper-slide"><img src="img/Ascensor/RCARGA.jpg" alt=""></div>
 					 <div class="swiper-slide"><img src="img/Ascensor/RCARGA2.jpg" alt=""></div>
 					 <div class="swiper-slide"><img src="img/Ascensor/CARGA1.jpg" alt=""></div>
