update folder imgp2

--- a/sub/proyectos/index.html
+++ b/sub/proyectos/index.html
@@ -157,13 +157,13 @@
      <section class="slider" id="main-slider"><!-- Ascensor -->
 				<div class="swiper-container" >
    				 <div class="swiper-wrapper" >
-					 <div class="swiper-slide"><img src="img/Ascensor/CARGA10.JPG" alt=""></div>
-					 <div class="swiper-slide"><img src="img/Ascensor/RCARGA.jpg" alt=""></div>
-					 <div class="swiper-slide"><img src="img/Ascensor/RCARGA2.jpg" alt=""></div>
-					 <div class="swiper-slide"><img src="img/Ascensor/CARGA1.jpg" alt=""></div>
-					  <div class="swiper-slide"><img src="img/Ascensor/CARGA4.JPG" alt=""></div>
-					   <div class="swiper-slide"><img src="img/Ascensor/CARGA2.JPG" alt=""></div>
-					    <div class="swiper-slide"><img src="img/Ascensor/CARGA9.JPG" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/Ascensor/CARGA10.JPG" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/Ascensor/RCARGA.jpg" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/Ascensor/RCARGA2.jpg" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/Ascensor/CARGA1.jpg" alt=""></div>
+					  <div class="swiper-slide"><img src="../imgp2/Ascensor/CARGA4.JPG" alt=""></div>
+					   <div class="swiper-slide"><img src="../imgp2/Ascensor/CARGA2.JPG" alt=""></div>
+					    <div class="swiper-slide"><img src="../imgp2/Ascensor/CARGA9.JPG" alt=""></div>
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination"></div>
@@ -356,12 +356,12 @@
      <section class="slider" id="main-slider"><!-- broster -->
 		<div class="swiper-container" >
    				 <div class="swiper-wrapper" >
-					 <div class="swiper-slide"><img src="img/broster/bro.jpg" alt=""></div>
-					 <div class="swiper-slide"><img src="img/broster/broR.JPG" alt=""></div>
-					 <div class="swiper-slide"><img src="img/broster/bro6.JPG" alt=""></div>
-					  <div class="swiper-slide"><video src="img/broster/Vbroster.mp4" width="auto" height="100%" autoplay muted loop></video></div>
-					 <div class="swiper-slide"><img src="img/broster/bro2.jpg" alt=""></div>
-					 <div class="swiper-slide"><img src="img/broster/bro7.jpg" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/broster/bro.jpg" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/broster/broR.JPG" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/broster/bro6.JPG" alt=""></div>
+					  <div class="swiper-slide"><video src="../imgp2/broster/Vbroster.mp4" width="auto" height="100%" autoplay muted loop></video></div>
+					 <div class="swiper-slide"><img src="../imgp2/broster/bro2.jpg" alt=""></div>
+					 <div class="swiper-slide"><img src="../imgp2/broster/bro7.jpg" alt=""></div>
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination"></div>
